add env variables - test with a request to get all quotes from db

--- a/client/vite-project/src/App.scss
+++ b/client/vite-project/src/App.scss
@@ -5,38 +5,39 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+// STYLES FOR MY BUTTON
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.button {
+  font-size: .9rem;
+  background-color: rgb(226, 226, 180);
+  border: none;
+
+  &:hover {
+    background-color: rgb(84, 145, 107);
+    transition: background-color .5s;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+
+// STYLES FOR MY DEMO CARD
 
 .card {
-  padding: 2em;
+  border: 1px solid black;
+  padding: 5rem 1.5rem;
+  margin-top: 3rem;
+  font-weight: 500;
+  opacity: .95;
 }
 
-.read-the-docs {
-  color: #888;
+.item {
+  // padding-bottom: 2rem;
+  list-style-type: none;
+
+  h3 {
+    color: rgb(26, 24, 24);
+  }
+  
+  p {
+    color: rgb(65, 61, 61);
+  }
 }
