--- a/client/vite-project/src/components/add-quote/AddQuote.scss
+++ b/client/vite-project/src/components/add-quote/AddQuote.scss
@@ -1,8 +1,21 @@
 form label {
     display: block;
     text-align: left;
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-bottom: .2rem;
 }
 
 form input {
     margin-bottom: 1rem;
+    font-size: 1.5rem;
+}
+
+form select {
+    font-size: 1.5rem;
+    width: 100%;
+}
+
+button {
+    margin-top: 1rem;
 }
