--- a/client/vite-project/src/App.scss
+++ b/client/vite-project/src/App.scss
@@ -1,5 +1,9 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-boxs;
+  box-sizing: border-box;
+}
+
+.app-container {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
