--- a/client/vite-project/src/components/edit-quote/EditQuote.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.scss
@@ -1,3 +1,13 @@
+.edit-quote__container {
+    text-align: center;
+    font-size: 2rem;
+}
+
+form {
+    margin: 0 auto;
+    padding: 0;
+}
+
 form textarea {
     width: 100%;
 }
