add first iteration of error handling of edit quote functionality
cover basic cases

--- a/client/vite-project/src/components/edit-quote/EditQuote.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.scss
@@ -15,3 +15,9 @@ form textarea {
 form select {
     width: 100%;
 }
+
+// for dev purposes // TODO: adjust accordingly when time comes to focus on css
+.errorMessage {
+    color: red;
+    font-size: 1rem;
+}
