--- a/client/vite-project/src/components/navigation/Navigation.scss
+++ b/client/vite-project/src/components/navigation/Navigation.scss
@@ -1,15 +1,17 @@
 nav {
-    background-color: rgb(65, 9, 9);
+    background-color: rgb(248, 248, 248);
     // width: 100vw;
     padding: 2rem;
-    text-align: right;
+    text-align: center;
 
     a {
         padding: 1rem;
-        color: white;
+        color: rgb(26, 25, 25);
+        font-size: 1.5rem;
+        text-decoration: none;
     }
 
     .greeting {
-        color: rgb(177, 177, 177);
+        color: rgb(41, 24, 24);
     }
 }
