--- a/client/vite-project/src/components/footer/Footer.scss
+++ b/client/vite-project/src/components/footer/Footer.scss
@@ -1,6 +1,6 @@
 footer {
-    background-color: black;
-    color: white;
+    background-color: rgb(238, 238, 238);
+    color: rgb(37, 37, 37);
     text-align: center;
     padding: 2rem 0;
 }
