--- a/client/vite-project/src/components/user-profile/UserProfile.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.scss
@@ -1,3 +1,19 @@
-h1 {
-    text-align: center;
+.page__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.quote__container {
+    width: 60%;
+
+    &__quote__text {
+        color:rgb(59, 54, 54);
+    }
+    
+    &__category {
+        text-align: right;
+        color: rgb(66, 60, 60);
+    }
+}
+
