--- a/client/vite-project/src/components/quotes/Quotes.scss
+++ b/client/vite-project/src/components/quotes/Quotes.scss
@@ -5,3 +5,10 @@
         list-style-type: none;
     }
 }
+
+.quotes_wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
