rename bot router and add comments including a TODO

--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:url"
-        content="http://localhost:3000/quotes/{{id}}" />
+        content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{quoteDetails.text}}" />
     <meta property="og:description" content="{{quoteDetails.author}}" />
