--- a/client/vite-project/src/components/toaster/Toaster.scss
+++ b/client/vite-project/src/components/toaster/Toaster.scss
@@ -1,5 +1,6 @@
 .toaster-container {
     display: flex;
-    background-color: rgb(255, 12, 12);
-    color: rgb(245, 245, 245);
+    background-color: rgb(247, 244, 244);
+    color: red;
+    font-weight:600;
 }
