--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -2,7 +2,12 @@
   box-sizing: border-box;
 }
 
-.app-container {
+:global(.active) {
+    outline: .1px solid skyblue;
+    border-radius: .5rem;
+}
+
+.app__container {
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -11,3 +16,4 @@
 button {
   width: fit-content;
 }
+
