--- a/client/vite-project/src/components/navigation/Navigation.module.scss
+++ b/client/vite-project/src/components/navigation/Navigation.module.scss
@@ -1,14 +1,21 @@
 .navigation__wrapper {
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(250, 250, 250);
     width: 100vw;
-    padding: 2rem;
-    text-align: center;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: .5rem;
+    transition: active 5s;
 
     a {
-        padding: .5rem;
+        padding: .4rem;
         color: rgb(26, 25, 25);
         font-size: 1.2rem;
         text-decoration: none;
+
+        &:hover {
+            color: rgb(95, 109, 114);
+        }
     }
 }
 
