--- a/client/vite-project/src/components/search/Search.module.scss
+++ b/client/vite-project/src/components/search/Search.module.scss
@@ -1,19 +1,51 @@
+.search__form {
+    display: flex;
+    flex-direction: column;
+}
+
 .input__wrapper {
     display: flex; 
     justify-content: end;  
-    // align-items: center;
+}
+
+.search__label {
+    font-size: .8rem;
+    font-weight: 400;
+    align-self: end;
+    padding-right: .3rem;
 }
 
 .search__input {
-    // display: block;
-    // border: 1px solid blue;
-    padding: .2rem 1.5rem .2rem .2rem;
+    border-radius: 1rem;
+    padding: .3rem 1.7rem .3rem .6rem;
+    outline: none;
+    border: 1px solid lightblue;
+
+    &::placeholder {
+        font-size: .9rem;
+        color: rgb(167, 167, 167);
+    }
+}
+
+.search__button {
+    border: none;
+    background-color: rgb(218, 238, 255);
+    border-radius: .5rem;
+    padding: .5rem 1.5rem;
+    font-weight: 500;
+    font-size: .8rem;
+    cursor: pointer;
+    align-self: center;
+
+    &:hover {
+        background-color: rgb(153, 207, 252);
+    }
 }
 
 .clear__icon {
     all: unset;
-    display: block;
     position: absolute;
     align-self: center;
-    padding-right: .3rem;
+    padding-right: .5rem;
+    cursor: pointer;
 }
