--- a/client/vite-project/src/components/navigation/Navigation.module.scss
+++ b/client/vite-project/src/components/navigation/Navigation.module.scss
@@ -1,5 +1,5 @@
 .navigation__wrapper {
-    background-color: rgb(250, 250, 250);
+    // background-color: rgb(250, 250, 250);
     width: 100vw;
     padding: 1rem;
     display: flex;
