--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -1,9 +1,26 @@
 .quotes__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 1rem;
-    background-color: rgba(227, 232, 235, 0.4);
 
     li {
         list-style-type: none;
+    }
+}
+
+.quotes__heading__wrapper {
+    margin-bottom: 2rem;
+    padding: 1rem;
+
+    &__main {
+        font-size: 4rem;
+        font-weight: bold;
+        margin-bottom: .5rem;
+    }
+
+    &__secondary {
+        font-weight: 300;
     }
 }
 
@@ -12,4 +29,5 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
+    margin-top: 4rem;
 }
