--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -1,10 +1,13 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 :global(.active) {
-    outline: .1px solid skyblue;
-    border-radius: .3rem;
+  outline: .1px solid skyblue;
+  border-radius: .3rem;
 }
 
 .app__container {
@@ -16,4 +19,3 @@
 button {
   width: fit-content;
 }
-
