--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -8,6 +8,7 @@
     border-radius: .5rem;
     padding: 1.2rem 1.7rem;
     transition: background-color .5s;
+    list-style-type: none;
 
     &:hover {
         cursor: pointer;
