--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -6,17 +6,24 @@
 }
 
 .quotes__heading__wrapper {
-    padding: 1rem;
+    padding-top: 1rem;
 
     &__main {
         font-size: 4rem;
         font-weight: bold;
-        padding-bottom: 1rem;
+        margin-bottom: 1rem;
     }
 
     &__secondary {
         font-weight: 300;
+        margin: 0;
+        padding: 0;
     }
+}
+
+// TODO: think if you can style / position it better
+.quotes__search {
+    
 }
 
 .quotes__list__wrapper {
