add some initial media queries to quote-card to make card wider on smaller screens

--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -32,3 +32,17 @@
         margin-left: .2rem;
     }
 }
+
+@media (max-width: 590px) {
+    .card {
+        width: 18rem;
+        height: 10rem;
+    }
+}
+
+@media (max-width: 350px) {
+    .card {
+        width: 12rem;
+        height: 10rem;
+    }
+}
