--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -1,21 +1,26 @@
 .quotes__container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 200px, 200px, 1fr, 200px;
+    justify-items: center;
     align-items: center;
-    padding: 1rem;
 }
 
 .quotes__heading__wrapper {
-    padding-top: 1rem;
+    grid-row: 1 / 2;
+    align-items: center;
+    justify-items: center;
 
     &__main {
         font-size: 4rem;
         font-weight: bold;
         margin-bottom: 1rem;
+        text-align: center;
     }
 
     &__secondary {
         font-weight: 300;
+        text-align: center;
         margin: 0;
         padding: 0;
     }
@@ -23,15 +28,21 @@
 
 // TODO: think if you can style / position it better
 .quotes__search {
-    
+    grid-row: 2 / 3;
 }
 
 .quotes__list__wrapper {
+    grid-row: 3 / 4;
     display: flex;
-    justify-content: center;
-    max-width: 1000px;
     flex-wrap: wrap;
+    max-width: 1200px;
+    justify-content: center;
+    padding-left: 0;
     gap: 1rem;
-    padding: 1rem 0;
-    margin-bottom: 4rem;
+}
+
+.load__more__button__wrapper {
+    grid-row: 4 / 5;
+    margin-top: 2rem;
+    margin: 0 auto;
 }
