--- a/client/vite-project/src/components/add-quote/AddQuote.module.scss
+++ b/client/vite-project/src/components/add-quote/AddQuote.module.scss
@@ -17,15 +17,20 @@
     justify-items: center;
 
     &__heading {
-        font-size: 3.5rem;
-        font-weight: 200;
+        font-size: 4rem;
+        font-weight: 400;
         margin-bottom: 0;
-    }
 
-    &__heading::first-letter {
-        color: rgb(250, 87, 87);
-        font-size: 5rem;
-        font-weight: bold;
+        &::after {
+            content: '.';
+            color: red;
+            font-weight: bold;
+        }
+
+        &::first-letter {
+            font-size: 5rem;
+            font-weight: bold;
+        }
     }
 
     &__subheading {
