--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -12,7 +12,8 @@ body {
 }
 
 :global(.active) {
-  outline: .1px solid skyblue;
+  // outline: .1px solid skyblue;
+  outline: .1px solid rgb(51, 51, 51);
   border-radius: .3rem;
 }
 
