--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -13,9 +13,20 @@
 
     &__main {
         font-size: 4rem;
-        font-weight: bold;
+        font-weight: 400;
         margin-bottom: 1rem;
         text-align: center;
+
+        &::after {
+            content: '.';
+            color: red;
+            font-weight: bold;
+        }
+
+        &::first-letter {
+            font-size: 5rem;
+            font-weight: bold;
+        }
     }
 
     &__secondary {
