--- a/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
+++ b/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
@@ -1,12 +1,14 @@
 .delete__button {
     all: unset;
+    font-size: .8rem;
+    padding: .5rem 2.1rem;
     color: rgb(207, 55, 55);
-    padding: .5rem 1.8rem;
+    border-radius: .5rem;
+    transition: background-color .3s;
     cursor: pointer;
-    margin-right: 2rem;
-    transition: color .3s;
 
     &:hover {
-        color: rgb(56, 17, 17);
+        background-color: rgb(230, 230, 230);
+        color: black;
     }
 }
