--- a/client/vite-project/src/components/buttons/edit-btn/EditButton.module.scss
+++ b/client/vite-project/src/components/buttons/edit-btn/EditButton.module.scss
@@ -1,16 +1,15 @@
 .edit__button {
     all: unset;
-    padding: .5rem 2.1rem;
-    color: rgb(66, 65, 65);
-    // background-color: rgb(198, 255, 198);
-    background-color: rgb(119, 219, 236);
-    border-radius: .3rem;
-    cursor: pointer;
+    font-size: .8rem;
+    padding: .5rem 2.5rem;
+    background-color: rgb(48, 48, 48);
+    color: rgb(231, 231, 231);
+    border-radius: .5rem;
     transition: background-color .3s;
+    cursor: pointer;
 
     &:hover {
-        background-color: rgb(30, 139, 158);
-        color: rgb(245, 242, 242);
-        outline: none;
+        background-color: rgb(245, 245, 245);
+        color: black;
     }
 }
