--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -10,6 +10,10 @@
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     align-self: center;
+
+    &__main__text {
+        text-align: center;
+    }
 }
 
 .back__button {
@@ -38,6 +42,7 @@
         line-height: 1.4;
         width: 75%;
         align-self: center;
+        text-align: center;
     }
 
     &__author {
@@ -49,8 +54,20 @@
 
 .action__buttons {
     grid-row: 4 / 5;
-    grid-column: 2 / 3;
-    
+    grid-column: 2 / 3; 
+    // border: 1px solid red;
+    display: flex;
+    // height: max-content;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media (max-width: 980px) {
+    .action__buttons {
+        flex-direction: column;
+        justify-content: center;
+        gap: .5rem;
+    }
 }
 
 .social__sharing {
