--- a/client/vite-project/src/components/like-button/LikeButton.module.scss
+++ b/client/vite-project/src/components/like-button/LikeButton.module.scss
@@ -1,5 +1,5 @@
 .like__button__container {
-    text-align: end;
+    // text-align: end;
 }
 
 .like__button {
@@ -14,6 +14,7 @@
 
     &:disabled {
         color: rgb(184, 184, 184);
+        cursor:initial;
     }
 }
 
