--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -25,7 +25,7 @@
 
 .likes__details {
     grid-row: 2 / 3;
-    grid-column: 3 / 4;
+    grid-column: 1 / 4;
     justify-self: end;
     align-self: start;
 }
@@ -62,17 +62,25 @@
     align-items: center;
 }
 
+.like__component {
+    grid-row: 4 / 5;
+    grid-column: 1 / 2; 
+    display: flex;
+    justify-content: start;
+    align-items: start;
+}
+
+.social__sharing {
+    grid-row: 5 / 6;
+    grid-column: 1 / 4;
+    align-self: start;
+    justify-self: end;
+}
+
 @media (max-width: 980px) {
     .action__buttons {
         flex-direction: column;
         justify-content: center;
         gap: .5rem;
     }
-}
-
-.social__sharing {
-    grid-row: 5 / 6;
-    grid-column: 1 / 4;
-    align-self: end;
-    justify-self: end;
 }
