--- a/client/vite-project/src/components/toaster/Toaster.module.scss
+++ b/client/vite-project/src/components/toaster/Toaster.module.scss
@@ -1,9 +1,10 @@
 .toaster__container {
-    background-color: rgba(39, 34, 34, 0.9);
-    border-radius: .5rem;
+    // background-color: rgba(245, 245, 245, 0.9);
+    border-radius: .9rem;
     padding: 2rem 1rem;
     opacity: 0;
-    transition: opacity 1s;
+    // transition: opacity .1s;
+    box-shadow: .1rem .1rem 1rem .1rem rgb(194, 194, 194);
 }
 
 .error__message {
@@ -14,6 +15,6 @@
 }
 
 .show {
-    opacity: 1; 
+    opacity: .9;
     transition: opacity 1s;
 }
