wrap loader in a div container and give it place on the Login page's grid layout

--- a/client/vite-project/src/components/login/Login.module.scss
+++ b/client/vite-project/src/components/login/Login.module.scss
@@ -110,3 +110,9 @@
 .login__form__toaster__container {
     grid-row: 3 / 4;
 }
+
+.login__form__loader__container {
+    grid-row: 2 / 3;
+    align-self: center;
+    justify-self: center;
+}
