--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -54,7 +54,7 @@
 
 .action__buttons {
     grid-row: 4 / 5;
-    grid-column: 2 / 3; 
+    grid-column: 2 / 3;
     // border: 1px solid red;
     display: flex;
     // height: max-content;
@@ -64,7 +64,7 @@
 
 .like__component {
     grid-row: 4 / 5;
-    grid-column: 1 / 2; 
+    grid-column: 1 / 2;
     display: flex;
     justify-content: start;
     align-items: start;
@@ -83,4 +83,9 @@
         justify-content: center;
         gap: .5rem;
     }
+}
+
+.quote__details__loader__container {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
