--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     // TODO; red about min max, as it may be useful for heading in regards to responsiveness
-    grid-template-rows: 250px 1fr;
+    grid-template-rows: 250px max-content 200px;
 }
 
 .form__data {
@@ -116,4 +116,16 @@
             color: black;
         }
     }
+}
+
+.edit__form__loader__container {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    // align-self: center;
+    justify-self: center;
+}
+
+.edit__form__toaster__container {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
 }
