--- a/client/vite-project/src/components/success-modal/SuccessModal.module.scss
+++ b/client/vite-project/src/components/success-modal/SuccessModal.module.scss
@@ -4,7 +4,6 @@
     box-shadow: .1rem .1rem 1rem rgb(61, 61, 61);  
 }
 
-
 .success__modal__icon__container {
     display: flex;
     justify-content: center;
@@ -23,4 +22,9 @@
 .success__modal__icon {
     color: rgb(115, 211, 115);
     font-size: 3rem;
+}
+
+.success__modal__seconds {
+    display: inline-block;
+    font-weight: bold;
 }
