conditionally render success modal and give me place on the grid

--- a/client/vite-project/src/components/register/Register.module.scss
+++ b/client/vite-project/src/components/register/Register.module.scss
@@ -99,3 +99,8 @@
     align-self: center;
     justify-self: center;
 }
+
+.register__form__success__modal__container {
+    grid-row: 2 / 3;
+    align-self: start;
+}
