--- a/client/vite-project/src/components/add-quote/AddQuote.module.scss
+++ b/client/vite-project/src/components/add-quote/AddQuote.module.scss
@@ -110,10 +110,18 @@
 .add__form__loader__container {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+    width: 100%;
+    justify-self: center;
+    align-self: center;
 }
 
 .add__form__toaster__container {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     align-self: center;
+}
+
+.add__form__success__modal__container {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
