--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -121,11 +121,15 @@
 .edit__form__loader__container {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-    // align-self: center;
     justify-self: center;
 }
 
 .edit__form__toaster__container {
     grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+
+.edit__form__success__modal__container {
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
 }
