render Loader and SuccessModal conditionally. Styles and better render will need to be improved, but functionality works for now, so moving on and when i refactor / write media queries for responsiveness will think it through
spent a few hours trying to understand why form states (success and isLoading) were not updating. Want to move on for now finally made it work. Refactor and deeper understanding will come later on

--- a/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
+++ b/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
@@ -64,3 +64,10 @@
     border-radius: .5rem;
     padding: 2rem;
 }
+
+.delete__modal__success_modal__wrapper {
+    background-color: white;
+    // TODO: this padding is bad, it just covers an issue - remove it, make sure to show success modal and you'd see the border radius issue
+    // FIX IT
+    border-radius: .8rem;
+}
