--- a/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
+++ b/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
@@ -5,28 +5,47 @@
     gap: .5rem;
 }
 
+.last__three__quotes__main__heading {
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: end;
+    position: relative;
+    color: rgb(49, 49, 49);
+
+    &::after {
+        content: '_______';
+        width: 100%;
+        height: .7rem;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        color: rgb(71, 2, 2);
+    }
+}
+
 .last__three__quote__wrapper {
-    background-color: rgb(241, 241, 241);  
+    background-color: rgb(255, 252, 252);  
     padding: 2rem;
     border-radius: .5rem;  
+    box-shadow: .5rem .7rem 1rem rgb(22, 22, 22);
 }
 
 .last__three__quote__text {
-    font-size: 1rem;
-    font-weight: 400;
+    font-size: 1.1rem;
+    font-weight: 300;
     // text-align: center;
+}
+
+.last__three__quote__author__and__likes__wrapper {
+    display: flex;
+    justify-content: end;
+    font-size: .5rem;
 }
 
 .last__three__quote__author {
     font-size: .7rem;
     font-weight: 600;
     text-align: end;
-}
-
-.last__three__quote__author__and__likes__wrapper {
-    display: flex;
-    justify-content: space-between;
-    font-size: .5rem;
 }
 
 .last__three__quote__likes__icon {
