--- a/client/vite-project/src/components/home/Home.module.scss
+++ b/client/vite-project/src/components/home/Home.module.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .home__text__container {
