change html of LikeCountIcon and move likesCount to the right of the icon

--- a/client/vite-project/src/components/like-count-icon/LikeCountIcon.module.scss
+++ b/client/vite-project/src/components/like-count-icon/LikeCountIcon.module.scss
@@ -3,7 +3,11 @@
     color: red;
 }
 
-.likes__count {
-    font-size: .8rem;
-    text-align: center;
+.likes__count__container {
+    display: flex;
+    align-items: end;
+}
+
+.likes__count__number {
+    font-size: .9rem;
 }
