--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -1,20 +1,69 @@
 .page__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    max-width: 90%;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 15rem 10rem 1fr;
+}
+
+.profile__page__welcome__message__container {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    align-self: start;
+    justify-self: start;
+    // box-shadow: 1rem 1rem 1rem rgb(226, 226, 226);
+    border-radius: .5rem;
+    padding: 1rem 2rem;
 }
 
 .profile__page__welcome__message {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 300;
-    text-align: end;
+    margin: 0;
+    display: inline-block;
+
+    &::first-letter {
+        font-weight: bold;
+        font-size: 2.5rem;
+    }
+
+    &__email {
+        font-size: 2rem;
+        font-weight: bold;
+        padding-left: .4rem;
+
+        &::after {
+            content: '.';
+            color: red;
+            font-weight: bold;
+        }
+    }
+
+    &__info {
+        font-size: .9rem;
+        text-align: center;
+        font-weight: 300;
+        align-self: center;
+    }
 }
 
+.profile__page__update__password__container {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+}
+
+
 .profile__page__heading {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
     font-size: 4rem;
     font-weight: 400;
     text-align: center;
-    line-height: 1.1;
+    line-height: 1.05;
 
     &::after {
         content: '.';
@@ -28,11 +77,28 @@
     }
 }
 
-.quote__container {
-    width: 60%;
+.quotes__container {
+    grid-column: 1 / 3; 
+    height: 600px;
+    overflow-y: scroll;
+}
+
+.quote__wrapper {
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    background-color: rgb(238, 238, 238);
+    width: 50%;
+    border-radius: .5rem;
+    color: white;
+    padding: .5rem 1rem;
+
+    &__quote__author {
+        font-size: 1rem;
+        color: black;
+    }
 
     &__quote__text {
-        color: rgb(59, 54, 54);
+        color: rgb(31, 31, 31);
     }
 
     &__category {
