--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -83,28 +83,49 @@
     overflow-y: scroll;
 }
 
-.quote__wrapper {
-    margin: 0 auto;
-    margin-bottom: 1rem;
-    background-color: rgb(238, 238, 238);
+.quote__card__wrapper {
     width: 50%;
+    margin: 0 auto;
+    margin-bottom: 1.5rem;
+    padding: .75rem 1.5rem;
     border-radius: .5rem;
+    background-color: rgb(250, 250, 250);
     color: white;
-    padding: .5rem 1rem;
+    box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
 
     &__quote__author {
-        font-size: 1rem;
+        font-size: .85rem;
         color: black;
+        font-weight: bold;
     }
 
     &__quote__text {
         color: rgb(31, 31, 31);
     }
 
-    &__category {
-        text-align: right;
-        color: rgb(66, 60, 60);
+    &__navigation__button {
+        all: unset;
+        font-weight: bold;
+        font-size: .7rem;
+        cursor: pointer;
+        background-color: rgb(22, 22, 22);
+        color: rgb(238, 238, 238);
+        border-radius: .5rem;
+        padding: .4rem 1rem;
+        transition: background-colors .3s;
+
+        &:hover {
+            background-color: white;
+            color: black;
+            transition: background-color .3s;
+        }
     }
+}
+
+.quote__card__author__and__nav__button__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .loader__container {
