--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -133,3 +133,8 @@
     grid-row: 2 / 3;
     grid-column: 2 / 3;
 }
+
+// temporary styles - just placing custom select in a acceptable place just so I can see it (working on its implementation at the moment)
+.custom__select__wrapper {
+
+}
