--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -136,5 +136,8 @@
 
 // temporary styles - just placing custom select in a acceptable place just so I can see it (working on its implementation at the moment)
 .custom__select__wrapper {
-
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    justify-self: center;
+    align-self: center;
 }
