--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -137,7 +137,8 @@
 // temporary styles - just placing custom select in a acceptable place just so I can see it (working on its implementation at the moment)
 .custom__select__wrapper {
     grid-row: 3 / 4;
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     justify-self: center;
     align-self: center;
+    width: 100%
 }
