conditionally render up / down arrow based on isDropdownOpen state

--- a/client/vite-project/src/components/select/Select.module.scss
+++ b/client/vite-project/src/components/select/Select.module.scss
@@ -27,7 +27,9 @@
 
 
     &__down__arrow {
-        display: none;
+        border-bottom: 10px solid white;
+        border-right: 10px solid transparent;
+        border-left: 10px solid transparent;
     }
 }
 
