--- a/client/vite-project/src/components/select/Select.module.scss
+++ b/client/vite-project/src/components/select/Select.module.scss
@@ -37,12 +37,23 @@
 // for now, i will use the approach with toggling visibility / opacity, but consider the other oproach of toggling height and opacity as it may be better
 
 .custom__select__options__list__wrapper {
-    background-color: rgb(240, 174, 240);
+    background-color: rgb(248, 248, 248);
     height: 200px;
     overflow-y: scroll;
     opacity: 0;
     visibility: hidden;
     transition: opacity .2s, visibility .3s;
+}
+
+.custom__select__option {
+    font-size: .8rem;
+    padding: .5rem .5rem;
+    cursor: pointer;
+
+    &:hover {
+        font-weight: bold;
+        background-color: grey;
+    }
 }
 
 .open {
