--- a/client/vite-project/src/components/select/Select.module.scss
+++ b/client/vite-project/src/components/select/Select.module.scss
@@ -5,7 +5,9 @@
     border-radius: 1rem;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    // for testing / implementation purposes hardcoding width
+    width: 300px;
 
     &:hover {
         cursor: pointer;
@@ -42,18 +44,41 @@
     overflow-y: scroll;
     opacity: 0;
     visibility: hidden;
-    transition: opacity .2s, visibility .3s;
+    transition: opacity .1s, visibility .2s;
+}
+
+.custom__select__option__container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 .3rem;
+
+    &:hover {
+        background-color: grey;
+    }
 }
 
 .custom__select__option {
+    margin: 0;
     font-size: .8rem;
     padding: .5rem .5rem;
     cursor: pointer;
+    // justify-self: start;
 
     &:hover {
         font-weight: bold;
-        background-color: grey;
     }
+}
+
+.custom__select__react__icon__container {
+    align-self: center;
+    justify-self: end;
+    display: flex;
+    align-items: center;
+}
+
+.custom__select__react__icon {
+    color: rgb(29, 28, 28); 
+    
 }
 
 .open {
