--- a/client/vite-project/src/components/select/Select.module.scss
+++ b/client/vite-project/src/components/select/Select.module.scss
@@ -2,7 +2,8 @@
     background-color: black;
     padding: .1rem 1rem;
     text-align: center;
-    border-radius: 1rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,16 +45,18 @@
     overflow-y: scroll;
     opacity: 0;
     visibility: hidden;
-    transition: opacity .1s, visibility .2s;
+    transition: opacity .2s, visibility .3s;
 }
 
 .custom__select__option__container {
     display: flex;
     justify-content: space-between;
     padding: 0 .3rem;
+    background-color: rgb(235, 235, 235);
 
     &:hover {
-        background-color: grey;
+        background-color: rgb(223, 223, 223);
+        cursor: pointer;
     }
 }
 
@@ -62,7 +65,6 @@
     font-size: .8rem;
     padding: .5rem .5rem;
     cursor: pointer;
-    // justify-self: start;
 
     &:hover {
         font-weight: bold;
@@ -77,11 +79,11 @@
 }
 
 .custom__select__react__icon {
-    color: rgb(29, 28, 28); 
-    
+    color: rgb(29, 28, 28);   
 }
 
 .open {
     opacity: 1;
     visibility: visible;
+    transition: opacity .2s, visibility .3s;
 }
