start working on moving the custom select into forms.
for now testing on edit form. commented out the normal select, keeping all there still as i am working on implementing it / testing the custom select.

--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -138,9 +138,6 @@
 .custom__select__wrapper {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
-    justify-self: center;
-    align-self: center;
-    // width: 100%;
-    padding: 2rem 4rem;
-    background-color: rgb(122, 122, 122, .5);
+    padding: 0;
+    height: 50px
 }
