--- a/client/vite-project/src/components/search/Search.module.scss
+++ b/client/vite-project/src/components/search/Search.module.scss
@@ -24,8 +24,8 @@
     border-radius: 1rem;
     padding: .3rem 1.7rem .3rem .6rem;
     outline: none;
-    border: 1px solid lightblue;
-    font-size: 1.5rem;
+    border: 1px solid rgb(26, 26, 26);
+    font-size: 1rem;
 
     &::placeholder {
         font-size: .9rem;
@@ -33,7 +33,8 @@
     }
 
     &:focus {
-        border: 1px solid rgb(12, 161, 62);
+        // border: 1px solid rgb(12, 161, 62);
+        background-color: rgb(236, 236, 236);
     }
 }
 
