change font-size depending on max-width
starting to work on responsiveness

--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -4,7 +4,8 @@
     justify-content: space-between ;
     width: 12rem;
     height: 14rem;
-    background-color: rgb(210, 232, 236, .85);
+    background-color: rgb(36, 35, 35);
+    color: rgb(238, 238, 238);
     border-radius: .5rem;
     padding: 1.2rem 1.7rem;
     transition: background-color .5s;
@@ -13,10 +14,11 @@
     &:hover {
         cursor: pointer;
         background-color: rgb(252, 252, 252);
+        color: rgb(32, 32, 32);
     }
 
     &__text {
-        color: rgb(27, 27, 27);
+        // color: rgb(27, 27, 27);
         text-align: end;
     }
 
