--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -57,3 +57,17 @@
     margin-top: 2rem;
     margin: 0 auto;
 }
+
+// styles for small screens
+
+@media (max-width: 600px) {
+    .quotes__heading__wrapper__secondary {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .quotes__heading__wrapper__secondary {
+        font-size: 1rem;
+    }
+}
