change home and quote pages headings,  reduce font-size of quote-card on smaller screens, extend width cards of last three quotes component
still all this is work in progress, but i am moving towards initial deploy, so i want to start testing in prod to see how it loads

--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between ;
+    justify-content: space-between;
     width: 12rem;
     height: 14rem;
     background-color: rgb(36, 35, 35);
@@ -39,7 +39,13 @@
     .card {
         width: 18rem;
         height: 10rem;
+
+        &__text {
+            font-size: .9rem;
+        }
     }
+
+
 }
 
 @media (max-width: 350px) {
