--- a/client/vite-project/src/components/home/Home.module.scss
+++ b/client/vite-project/src/components/home/Home.module.scss
@@ -34,3 +34,14 @@
     font-weight: 300;
     font-size: 1.2rem;
 }
+
+@media (max-width: 1000px) {
+    .home__heading {
+        // font-size: 2.5rem;
+        line-height: 1;
+    }
+
+    .home__subheading {
+        font-size: 1rem;
+    }
+}
