--- a/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
+++ b/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
@@ -42,7 +42,8 @@
 }
 
 .last__three__quote__text {
-    font-size: 1rem;
+    font-size: .8rem;
+    line-height: 1.2;
     font-weight: 300;
     // text-align: center;
 }
@@ -70,5 +71,12 @@
     font-size: .8rem;
     align-self: end;
     margin: 0;
+}
+
+// 
+@media (max-width: 1000px) {
+    .last__three__quotes__container {
+        width: 80%;
+    }
 }
 
