--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -1,6 +1,6 @@
 .page__wrapper {
     display: grid;
-    max-width: 90%;
+    max-width: 1000px;
     margin: 0 auto;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 15rem 10rem 1fr;
@@ -81,22 +81,30 @@
     grid-column: 1 / 3; 
     height: 600px;
     overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    // the below margin is not the best solution, but on small screens quotes container overlaps the heading. leaving it as is for now as it fixes the issue, but it is far from ideal and needs changing / optimizing
+    margin-top: 5rem;
 }
 
 .quote__card__wrapper {
-    width: 50%;
-    margin: 0 auto;
-    margin-bottom: 1.5rem;
+    width: 200px;
     padding: .75rem 1.5rem;
     border-radius: .5rem;
     background-color: rgb(250, 250, 250);
     color: white;
     box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &__quote__author {
         font-size: .85rem;
         color: black;
         font-weight: bold;
+        text-align: end;
     }
 
     &__quote__text {
@@ -131,4 +139,18 @@
 .loader__container {
     align-self: center;
     justify-self: center;
+}
+
+// styles for quotes container scrollbar
+
+.quotes__container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.quotes__container::-webkit-scrollbar-track {
+    background-color: black;
+}
+
+.quotes__container::-webkit-scrollbar-thumb {
+    background-color: rgb(148, 148, 148);
 }
