--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -78,7 +78,7 @@
 }
 
 .quotes__container {
-    grid-column: 1 / 3; 
+    grid-column: 1 / 3;
     height: 600px;
     overflow-y: scroll;
     display: flex;
@@ -93,38 +93,41 @@
     width: 200px;
     padding: .75rem 1.5rem;
     border-radius: .5rem;
-    background-color: rgb(250, 250, 250);
+    // background-color: rgb(250, 250, 250);
+    background-color: rgb(22, 22, 22);
     color: white;
-    box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
+    // box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     &__quote__author {
-        font-size: .85rem;
-        color: black;
+        font-size: .75rem;
+        color: rgb(228, 228, 228);
         font-weight: bold;
         text-align: end;
     }
 
     &__quote__text {
-        color: rgb(31, 31, 31);
+        font-size: .85rem;
+        color: rgb(228, 228, 228);
     }
 
     &__navigation__button {
         all: unset;
         font-weight: bold;
-        font-size: .7rem;
+        font-size: .6rem;
         cursor: pointer;
-        background-color: rgb(22, 22, 22);
-        color: rgb(238, 238, 238);
+
+        background-color: white;
+        color: black;
         border-radius: .5rem;
-        padding: .4rem 1rem;
+        padding: .3rem .8rem;
         transition: background-colors .3s;
 
         &:hover {
-            background-color: white;
-            color: black;
+            background-color: rgb(56, 56, 56);
+            color: rgb(238, 238, 238);
             transition: background-color .3s;
         }
     }
@@ -153,4 +156,27 @@
 
 .quotes__container::-webkit-scrollbar-thumb {
     background-color: rgb(148, 148, 148);
+}
+
+// styles for small sizes
+
+@media (max-width: 500px) {
+
+    .page__wrapper {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 17rem 10rem 1fr;
+    }
+
+
+    .profile__page__welcome__message__container {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+        justify-self: center;
+    }
+
+    .profile__page__update__password__container {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+        justify-self: center;
+    }
 }
