--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -54,6 +54,7 @@
 .edit__form {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+    display: grid;
 
     &__form__data {
         display: grid;
@@ -70,8 +71,8 @@
     &__input,
     &__textarea,
     &__select {
-        padding: .5rem;
-        border-radius: .7rem;
+        padding: .5rem .8rem;
+        border-radius: .1rem;
         outline: none;
         border: none;
         background-color: rgb(248, 248, 248);
@@ -80,6 +81,18 @@
     &__textarea {
         min-height: 6rem;
         resize: vertical;
+
+        &::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: black;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: grey;
+        }
     }
 
     &__input:user-invalid,
@@ -139,4 +152,45 @@
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     padding: 0;
+}
+
+// styles for smaller screens / responsiveness
+@media (max-width: 500px) {
+
+    .edit__form__container {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    .edit__form {
+        grid-column: 1 / 4;
+
+        &__input,
+        &__textarea {
+            font-size: .8rem;
+            background-color: rgb(24, 23, 23);
+            color: white;
+
+            &:focus {
+                background-color: rgb(243, 243, 243);
+                color: black;
+            }
+        }
+
+        &__textarea {
+            min-height: 250px;
+        }
+
+        &__label {
+            font-size: .7rem;
+            font-weight: 500;
+            margin-top: 1rem;
+        }
+
+        &__submit__button {
+            width: fit-content;
+            font-size: .7rem;
+            padding: .4rem .9rem;
+        }
+    }
 }
