--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -12,9 +12,9 @@ body {
 }
 
 :global(.active) {
-  outline: .1px solid skyblue;
+  // outline: .1px solid skyblue;
   outline: .1px solid rgb(51, 51, 51);
-  border-radius: .3rem;
+  border-radius: .1rem;
 }
 
 .app__container {
