--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -37,11 +37,17 @@
 
 @media (max-width: 590px) {
     .card {
-        width: 18rem;
-        height: 10rem;
+        // width: 15rem;
+        width: 50%;
+        height: 9rem;
+        padding: 1rem 1.5rem;
 
         &__text {
-            font-size: .9rem;
+            font-size: .8rem;
+        }
+
+        &__author {
+            font-size: .7rem;
         }
     }
 
