adjust font-size and color of quote card to 1. make it more consistent and 2. make it more visually pleasing
design (colors more specifically is what i refer to here) will be changing a lot, but guess that's normal

--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     width: 12rem;
     height: 14rem;
-    background-color: rgb(36, 35, 35);
+    background-color: rgb(12, 12, 12);
     color: rgb(238, 238, 238);
     border-radius: .5rem;
     padding: 1.2rem 1.7rem;
@@ -18,8 +18,8 @@
     }
 
     &__text {
-        // color: rgb(27, 27, 27);
         text-align: end;
+        font-size: .9rem;
     }
 
     &__author {
