abstract basic styles of input element
update all components that have inputs by removing base styles (including styles of states such as focus, user-valid, invalid) as those are abstract now

abstracted to App.module.scss

--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -1,5 +1,10 @@
-*
-html,
+:root {
+    --error: rgb(204, 64, 64);
+    --success: rgb(44, 167, 44);
+    --warning: rgb(255, 205, 112);
+}
+
+* html,
 body {
   box-sizing: border-box;
   height: 100%;
@@ -26,4 +31,35 @@ body {
 ol,
 ul {
   list-style: none;
+}
+
+input,
+textarea {
+  border-radius: .1rem;
+  outline: none;
+  border: 1px solid rgb(23, 23, 23);
+  transition: border .2s;
+  padding: .7rem;
+
+  &:focus {
+        border: 1px solid white;
+        background-color: rgb(233, 233, 233);
+        transition: border .2s;
+    }
+
+  &::placeholder {
+    font-size: .6rem;
+  }
+
+  &:user-invalid {
+    border: 1px solid white;
+    outline: 1px solid var(--error);
+  }
+
+  &:user-valid {
+    border: 1px solid white;
+    outline: 1px solid var(--success);
+  }
+
+  
 }
