--- a/client/vite-project/src/components/login/Login.module.scss
+++ b/client/vite-project/src/components/login/Login.module.scss
@@ -1,7 +1,7 @@
 :root {
     --error: rgb(204, 64, 64);
     --success: rgb(2, 99, 2);
-    --warning: rgb(255, 205, 112);
+    // --warning: rgb(255, 205, 112);
 }
 
 .login__form__container {
@@ -49,35 +49,6 @@
         color: rgb(34, 34, 34);
         text-align: left;
         padding-top: .7rem;
-    }
-
-    &__input {
-        padding: .7rem;
-        border-radius: .1rem;
-        border: 1px solid black;
-        background-color: rgb(248, 248, 248);
-        transition: border .2s;
-    }
-
-    &__input:user-invalid {
-        outline: 1px solid var(--error);
-        border: 1px solid white;
-    }
-
-    &__input:user-valid {
-        outline: 1px solid var(--success);
-        border: 1px solid white;
-    }
-
-    &__input:focus {
-        outline: none;
-        border: 1px solid white;
-        background-color: rgb(226, 226, 226);
-        transition: border .2s;
-    }
-
-    &__input::placeholder {
-        font-size: .7rem;
     }
 
     &__submit__button {
