--- a/client/vite-project/src/components/register/Register.module.scss
+++ b/client/vite-project/src/components/register/Register.module.scss
@@ -1,7 +1,7 @@
 :root {
     --error: rgb(204, 64, 64);
     --success: rgb(2, 99, 2);
-    --warning: rgb(255, 205, 112);
+    // --warning: rgb(255, 205, 112);
 }
 
 .register__form__container {
@@ -50,26 +50,6 @@
         color: rgb(34, 34, 34);
         text-align: left;
         padding: .3rem 0;
-    }
-
-    &__input {
-        padding: .7rem;
-        border-radius: .7rem;
-        outline: none;
-        border: none;
-        background-color: rgb(248, 248, 248);
-    }
-
-    &__input:user-invalid {
-        outline: 2px solid var(--error);
-    }
-
-    &__input:user-valid {
-        outline: 2px solid var(--success);
-    }
-
-    &__input:focus {
-        outline: 2px solid var(--warning);
     }
 
     &__submit__button {
