--- a/client/vite-project/src/components/reset-password/ResetPassword.module.scss
+++ b/client/vite-project/src/components/reset-password/ResetPassword.module.scss
@@ -3,6 +3,7 @@
     // grid-template-columns: max-content;
     grid-template-rows: 250px 1fr;
     justify-content: center;
+    padding: 2rem;
 }
 
 .reset__password__text__container {
@@ -50,26 +51,6 @@
         text-align: left;
         padding: .3rem 0;
     }
-
-    &__input {
-        padding: .5rem;
-        border-radius: .7rem;
-        outline: none;
-        border: none;
-        background-color: rgb(248, 248, 248);
-    }
-
-    &__input:user-invalid {
-        outline: 2px solid var(--error);
-    }
-
-    &__input:user-valid {
-        outline: 2px solid var(--success);
-    }
-
-    &__input:focus {
-        outline: 2px solid var(--warning);
-    }
 }
 
 .form__data {
@@ -79,12 +60,12 @@
 
 .reset__password__form__submit__button {
     all: unset;
-    font-size: .8rem;
-    padding: .5rem 1.5rem;
+    font-size: .7rem;
+    padding: .4rem 1.3rem;
     margin-top: 1rem;
     background-color: rgb(48, 48, 48);
     color: rgb(231, 231, 231);
-    border-radius: .5rem;
+    border-radius: .1rem;
     transition: background-color .3s;
     cursor: pointer;
 
